Fixed layout issue.

--- a/src/app/modules/media/components/mt-media-cover/mt-media-cover.component.scss
+++ b/src/app/modules/media/components/mt-media-cover/mt-media-cover.component.scss
@@ -101,7 +101,8 @@
     left: 0;
 
     .cover-action {
-      $size: 1.75em;
+      $size: 1.25em;
+      display: contents;
       font-size: $font-size-100;
       height: $size;
       line-height: initial;
